# okto

./: .config.json  .gitignore  .npmrc  ANDROID_BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IOS_BUILD.md  Makefile  PRIVACY_POLICY.md  PROTOCOL.md  README.md  STAGED_TODO.md  SUPPORT.md  TODO.md  _config.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  mkdocs.yml  package-lock.json  package.json  start_dev.sh  stop_dev.sh
.cargo/: config.toml
.github/workflows/: android.yml  cli.yml  desktop.yml  docs.yml  ios.yml  lair.yml  mobile-test.yml  relay.yml
app/: Cargo.toml
app/src/: agent.rs  bootstrap.rs  lair.rs  main.rs  push.rs  server.rs
claudulhu/: pyproject.toml
claudulhu/src/claudulhu/: main.py
claudulhu/src/claudulhu_daemon/: app.py  chat.py  main.py  monitor.py  shared_session.py  workers.py
cli/: CHANGELOG.md  Cargo.toml  install  pyproject.toml  seccomp.json
cli/src/: agents.rs  containers.rs  dockerd.rs  icon.rs  init.rs  main.rs  mcp.rs  qr.rs  service.rs  ssh.rs  tasks.rs
cli/src/claudulhu/: main.py
core/: Cargo.toml
core/src/: app.rs  background.rs  lib.rs  mcp.rs  noise.rs  registry.rs  relay.rs  ssh.rs
deploy/: deploy-claudulhu.sh
desktop/: .gitignore  CHANGELOG.md  index.html  jest.config.cjs  jest.setup.cjs  jest.setupAfterEnv.cjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
desktop/__tests__/: App.test.tsx  README.md  agent_delete.test.tsx  agent_delete_reopen.test.tsx  autoconnect.test.tsx  chat.test.tsx  connection.test.tsx  interactions.test.tsx  sidebar.test.tsx  tasks.test.tsx  wireProtocol.test.tsx
desktop/__tests__/helpers/: oktoUiMock.tsx  render.tsx  server.ts
desktop/src/: App.css  App.tsx  global.css  main.tsx  qr.ts  testIds.ts  wire.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/: COST_REVIEW.md  agent-isolation.md  anthropic-cache-strategy.md  background-tasks.md  buildah.md  builtin-tools.md  cache-strategy.md  connection-architecture.md  env-config.md  history-compaction.md  keypairs.md  kubernetes-migration.md  lair-architecture.md  master-architecture.md  mcp-tools.md  mcp.json  privacy-policy.html  rulyeh-architecture.md  server-authoritative-protocol.md  ssh-certs.md
k8s/: lair.yaml  namespace.yaml  rbac.yaml  rulyeh.yaml  secret.example.yaml  setup.md
k8s-ops/src/: config.rs  k8s.rs  lib.rs
lair/: CHANGELOG.md  Cargo.toml  Dockerfile  docker-entrypoint.sh
lair/src/: agent.rs  agent_proc.rs  agent_tokens.rs  bootstrap.rs  lair.rs  main.rs  ssh.rs
master/: Cargo.toml  Dockerfile  docker-entrypoint.sh
master/src/: main.rs
mobile/: App.tsx  CHANGELOG.md  app.json  babel.config.js  jest.config.js  jest.setup.js  jest.setupAfterEnv.js  metro.config.js  package-lock.json  package.json  privacy-policy.html  tailwind.config.js
mobile/.maestro/: README.md  connect.yaml  smoke.yaml
mobile/__tests__/: App.test.tsx  chat.test.tsx  connection.test.tsx  interactions.test.tsx  sidebar.test.tsx  tasks.test.tsx  wireProtocol.test.tsx
mobile/__tests__/helpers/: oktoUiMock.tsx  render.tsx  server.ts
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/claudulhu/: MainApplication.kt  NativeNoiseConnectionSpec.java  NoiseConnectionModule.java  NoiseConnectionPackage.java  SshTunnelModule.java
mobile/android/app/src/main/java/com/octo/: MainActivity.kt  MainApplication.kt  NoiseConnectionModule.java  NoiseConnectionPackage.java
mobile/android/app/src/main/java/com/okto/: MainActivity.kt  MainApplication.kt  NoiseConnectionModule.java  NoiseConnectionPackage.java
mobile/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
mobile/fastlane/: Appfile  Fastfile
mobile/ios/: Podfile
mobile/ios/claudulhu/: Info.plist  NoiseConnectionModule.m  NoiseConnectionModule.swift
mobile/ios/claudulhu.xcodeproj/: project.pbxproj
mobile/ios/octo/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  NoiseConnectionModule.swift  PushModule.m  PushModule.swift
mobile/ios/octo.xcodeproj/: project.pbxproj
mobile/ios/octo.xcodeproj/xcshareddata/xcschemes/: octo.xcscheme
mobile/ios/okto/: AppDelegate.swift  Info.plist  NoiseConnectionModule.swift  PushModule.m  PushModule.swift
mobile/ios/okto.xcodeproj/: project.pbxproj
mobile/ios/okto.xcodeproj/xcshareddata/xcschemes/: okto.xcscheme
mobile/ios/okto.xcworkspace/: contents.xcworkspacedata
mobile/ios/okto/Images.xcassets/AppIcon.appiconset/: Contents.json
mobile/scripts/: maestro-e2e.sh
mobile/src/: NativeNoiseConnection.ts  NativePush.ts  NativeSshTunnel.ts  historyCache.ts  registerWithRelay.ts  wire.ts
relay/: Cargo.toml
relay/src/: apns.rs  db.rs  main.rs  routes.rs
rulyeh/: Cargo.toml  Dockerfile  docker-entrypoint.sh
rulyeh/src/: aws.rs  k8s.rs  main.rs
scripts/: build-lair-image.sh  get-cli.sh
server/: CHANGELOG.md  Cargo.toml  Dockerfile  docker-entrypoint.sh
server/src/: main.rs
tests/: Cargo.toml
tests/tests/: agent_create.rs  boot.rs  chat.rs  cli_agents.rs  cli_check_config.rs  cli_config.rs  cli_env.rs  cli_mcp.rs  cli_misc.rs  cli_qr_ssh.rs  cli_tasks.rs  connection.rs  desktop.rs  disable_push.rs  maestro_serve.rs  openai_cost.rs  peer_message.rs  tools.rs  worktree_tools.rs
tests/tests/common/: agent_proc.rs  lair_proc.rs  mock_llm.rs  mock_mgmt.rs  mod.rs  okto_cli.rs  tunnel.rs
userdocs/: agents.md  cli-reference.md  customization.md  getting-started.md  index.md  install.md  managing-lair.md  mcp.md  notifications.md  privacy.md  support.md  tasks.md
web/src/: App.css  App.tsx  index.css
web/src-tauri/: Cargo.toml
web/src-tauri/src/: lib.rs
