[project]
name = "claudulhu-daemon"
version = "0.1.0"
description = "Orchestrator daemon for managing Claude subagents across git branches"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.0.14",
    "gitpython>=3.1.46",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
claudulhud = "claudulhu_daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudulhu_daemon"]
