[package]
name        = "okto"
version     = "0.6.0"
edition     = "2021"
description = "okto lair management CLI"

[[bin]]
name = "okto"
path = "src/main.rs"

[dependencies]
okto-core         = { path = "../core" }
anyhow            = "1.0"
clap              = { version = "4", features = ["derive", "env"] }
clap_complete     = "4"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
tokio             = { version = "1", features = ["full"] }
snow              = "0.9"
data-encoding     = "2"
qrcode            = "0.14"
reqwest           = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util      = "0.3"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Vendor openssl-sys so the aarch64 cross-compile in cli.yml doesn't try to
# pkg-config a host OpenSSL it can't find. okto-core's git2 dep transitively
# pulls in openssl-sys; this forces the entire dep tree to use an in-tree
# source build of OpenSSL.
openssl           = { version = "0.10", features = ["vendored"] }
