[package]
name    = "claudulhu-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1.0",  features = ["derive"] }
serde_json   = "1.0"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
uuid         = { version = "1",    features = ["v4"] }
glob         = "0.3"
git2         = "0.19"
