[package]
name    = "okto-core"
version = "0.0.4"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
tokio-util   = { version = "0.7",  features = ["rt"] }
serde        = { version = "1.0",  features = ["derive"] }
serde_json   = "1.0"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2"], default-features = false }
futures-util = "0.3"
uuid         = { version = "1",    features = ["v4"] }
glob         = "0.3"
git2         = "0.19"
snow         = "0.9"
anyhow       = "1.0"
tracing      = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand         = "0.8"
base64       = "0.22"
ssh-key      = { version = "0.6", features = ["ed25519", "rand_core"] }

# Used to signal a bash tool's whole process group on interrupt (kill the
# command plus anything it spawned, not just the bash leader).
[target.'cfg(unix)'.dependencies]
libc         = "0.2"
