[package]
name        = "octo-lair"
version     = "0.2.30"
edition     = "2021"
description = "octo master control node"

[[bin]]
name = "octo-lair"
path = "src/main.rs"

[dependencies]
octo-core = { path = "../core" }
axum           = { version = "0.7",  features = ["ws"] }
tokio          = { version = "1",    features = ["full"] }
tokio-util     = { version = "0.7",  features = ["rt"] }
tower-http     = { version = "0.5",  features = ["cors"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_json     = "1.0"
futures-util   = "0.3"
reqwest        = { version = "0.12", features = ["json"] }
octo-k8s-ops   = { path = "../k8s-ops" }
anyhow              = "1.0"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "time"] }
hex                 = "0.4"
