[package]
name        = "claudulhu-master"
version     = "0.1.0"
edition     = "2021"
description = "claudulhu master control node"

[[bin]]
name = "claudulhu-master"
path = "src/main.rs"

[dependencies]
claudulhu-core = { path = "../core" }
axum           = { version = "0.7",  features = ["ws"] }
tokio          = { version = "1",    features = ["full"] }
tower-http     = { version = "0.5",  features = ["cors"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_json     = "1.0"
futures-util   = "0.3"
snow           = "0.9"
anyhow         = "1.0"
