[package]
name        = "claudulhu-rulyeh"
version     = "0.0.8"
edition     = "2021"
description = "claudulhu master control node"

[[bin]]
name = "claudulhu-rulyeh"
path = "src/main.rs"

[dependencies]
claudulhu-core = { path = "../core" }
axum           = { version = "0.7",  features = ["ws"] }
tokio          = { version = "1",    features = ["full"] }
tower-http     = { version = "0.5",  features = ["cors"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_json     = "1.0"
futures-util   = "0.3"
anyhow         = "1.0"
