[package]
name        = "claudulhu-rulyeh"
version     = "0.2.18"
edition     = "2021"
description = "claudulhu master control node"

[[bin]]
name = "claudulhu-rulyeh"
path = "src/main.rs"

[dependencies]
claudulhu-core = { path = "../core" }
axum           = { version = "0.7",  features = ["ws"] }
tokio          = { version = "1",    features = ["full"] }
tower-http     = { version = "0.5",  features = ["cors"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_json     = "1.0"
futures-util   = "0.3"
reqwest        = { version = "0.12", features = ["json"] }
anyhow              = "1.0"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "time"] }
kube                = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi         = { version = "0.24", features = ["v1_32"] }
hex                 = "0.4"
