[package]
name        = "claudulhu-server"
version     = "0.1.0"
edition     = "2021"
description = "claudulhu standalone HTTP/WebSocket server"

[[bin]]
name = "claudulhu-server"
path = "src/main.rs"

[dependencies]
claudulhu-core = { path = "../core" }
axum           = { version = "0.7",  features = ["ws"] }
tokio          = { version = "1",    features = ["full"] }
tower-http     = { version = "0.5",  features = ["cors"] }
serde          = { version = "1.0",  features = ["derive"] }
serde_json     = "1.0"
uuid           = { version = "1",    features = ["v4"] }
futures-util   = "0.3"
git2           = { version = "0.19", features = ["vendored-libgit2"] }
openssl        = { version = "0.10", features = ["vendored"] }
snow           = "0.9"
anyhow         = "1.0"
hex            = "0.4"
