[package]
name = "desktop"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
okto-core = { path = "../../core" }

# okto-core pulls git2 → openssl-sys. Build OpenSSL from source and link it
# statically so the universal (x86_64 + aarch64) build cross-compiles cleanly
# on the arm64 CI runner instead of hunting for a per-arch system OpenSSL.
openssl-sys = { version = "0.9", features = ["vendored"] }

